crates/sbtui/src/view/snapshots/sbtui__view__render_tests__logs-rules-view.snap
---
source: crates/sbtui/src/view/mod.rs
expression: "frame_for(Tab::Logs, snapshot, true)"
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置                                               " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " ")]
"                                                                                                    "
" ┌分流规则 · r 返回日志───────────────────────────────────────────────────────────────────────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
" │── 分流规则（自上而下匹配）──                                                                   │ " Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " ")]
" │ 1. 域名后缀 · example.com → 🚀节点选择                                                         │ " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " ")]
" │ 2. 私有地址 → direct                                                                           │ " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " ")]
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  ↑↓/PgUp PgDn 回看  ·  End 回到最新  ·  Space 暂停  ·  l 级别   " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (51, " "), (53, " "), (64, " "), (66, " "), (68, " "), (70, " "), (83, " "), (85, " "), (94, " "), (96, " ")]
"                                                                                                    "
"                                                                                                    "
