crates/sbtui/src/view/snapshots/sbtui__view__render_tests__logs-tail.snap
---
source: crates/sbtui/src/view/mod.rs
expression: "frame_for(Tab::Logs, snapshot.clone())"
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站                                    " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " ")]
"                                                                                                    "
" ┌日志 [全部]（Space 暂停，l 级别，/ 关键字，c 复制，r 规则）─────────────────────────────────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (14, " "), (22, " "), (24, " "), (26, " "), (30, " "), (32, " "), (34, " "), (38, " "), (40, " "), (42, " "), (44, " "), (48, " "), (50, " "), (52, " "), (56, " "), (58, " "), (60, " ")]
" │info: inbound connection to 127.0.0.1:8099                                                      │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  ↑↓/PgUp PgDn 回看  ·  End 回到最新  ·  Space 暂停  ·  l 级别   " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (51, " "), (53, " "), (64, " "), (66, " "), (68, " "), (70, " "), (83, " "), (85, " "), (94, " "), (96, " ")]
"                                                                                                    "
"                                                                                                    "
