crates/sbtui/src/view/snapshots/sbtui__view__render_tests__override-bare.snap
---
source: crates/sbtui/src/view/mod.rs
expression: bare_frame
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站  │  7 覆写                         " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " "), (72, " "), (74, " ")]
"                                                                                                    "
" ┌配置覆写 · 手写整份（无片段可开关）──────────────┐┌生效配置 · 已脱敏 / redacted · 只读──────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (54, " "), (56, " "), (58, " "), (60, " "), (65, " "), (67, " "), (69, " "), (85, " "), (87, " ")]
" │档案  手写档案                                   ││已脱敏 / redacted：密钥与订阅凭据不在此显示  │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (15, " "), (54, " "), (56, " "), (58, " "), (71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " ")]
" │覆写  1/1 片段启用 · 49 字节                     ││来源  运行中内核的配置（active-config.json） │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (13, " "), (15, " "), (17, " "), (19, " "), (27, " "), (29, " "), (54, " "), (56, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " "), (96, " ")]
" │生效  开关只改这个文件，下次启动内核时才生效     ││                                             │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " ")]
" │文件  数据目录/overrides/ 下本档案名的 sha256：  ││/dns/final: dns-out                          │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (15, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (48, " ")]
" │9f2c4a7e1b8d35f6a0c7e2d4b9f83c5e6d0a2f47b1c93d8e0││/dns/servers: 2 项                           │ " Hidden by multi-width symbols: [(70, " ")]
" │a5c7f2419db6e3                                   ││/dns/tag: dns-in                             │ "
" │手写整份覆写：没有片段列表，无片段可开关。       ││/experimental/clash_api/external_controller:…│ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " ")]
" │▸ [启用] 整份覆写（手写文件）（override）        ││/experimental/clash_api/secret: [已脱敏]     │ " Hidden by multi-width symbols: [(6, " "), (8, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (42, " "), (87, " "), (89, " "), (91, " ")]
" │  改动  /dns/final、/dns/servers(1 项)           ││/inbounds: 2 项                              │ " Hidden by multi-width symbols: [(5, " "), (7, " "), (21, " "), (38, " "), (67, " ")]
" │                                                 ││/log/level: info                             │ "
" │                                                 ││/log/timestamp: true                         │ "
" │                                                 ││/outbounds: 2 项                             │ " Hidden by multi-width symbols: [(68, " ")]
" │                                                 ││/route/auto_detect_interface: true           │ "
" │                                                 ││/route/final: 🚀节点选择                     │ " Hidden by multi-width symbols: [(68, " "), (70, " "), (72, " "), (74, " "), (76, " ")]
" │                                                 ││/route/object_cache_url: https://sbctl.test/…│ "
" │                                                 ││/route/rule_set: 1 项                        │ " Hidden by multi-width symbols: [(73, " ")]
" │                                                 ││/route/rules: 9 条                           │ " Hidden by multi-width symbols: [(70, " ")]
" │                                                 ││                                             │ "
" │                                                 ││                                             │ "
" │保留字段  没有启用中的片段改动它们               ││                                             │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " ")]
" │本页只读，不编辑 JSON：要改覆写就在数据目录的    ││                                             │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " ")]
" │overrides/ 下改文件，再重启 sbtui。              ││                                             │ " Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (36, " ")]
" └─────────────────────────────────────────────────┘└─────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  只读  ·  ↑↓/Enter 开关片段（下次启动生效）  ·  O 删覆写  │  Ta " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (38, " "), (40, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " "), (78, " "), (87, " "), (89, " "), (91, " ")]
"                                                                                                    "
"                                                                                                    "
