crates/sbtui/src/view/snapshots/sbtui__view__render_tests__override-error.snap
---
source: crates/sbtui/src/view/mod.rs
expression: broken_frame
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站  │  7 覆写                         " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " "), (72, " "), (74, " ")]
"                                                                                                    "
" ┌配置覆写 · 覆写无效──────────────────────────────┐┌生效配置 · 已脱敏 / redacted · 只读──────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (14, " "), (16, " "), (18, " "), (20, " "), (54, " "), (56, " "), (58, " "), (60, " "), (65, " "), (67, " "), (69, " "), (85, " "), (87, " ")]
" │覆写无效 · 内核不会启动                          ││已脱敏 / redacted：密钥与订阅凭据不在此显示  │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (54, " "), (56, " "), (58, " "), (71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " ")]
" │<DATA_DIR>/overrides/9f2c4a7e1b8d35f6a0c7e2d4b9f8││来源  运行中内核的配置（active-config.json） │ " Hidden by multi-width symbols: [(54, " "), (56, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " "), (96, " ")]
" │3c5e6d0a2f47b1c93d8e0a5c7f2419db6e3 不是有效的   ││                                             │ " Hidden by multi-width symbols: [(39, " "), (41, " "), (43, " "), (45, " "), (47, " ")]
" │JSON（根对象 `/`，第 1 行第 22 列）: expected    ││/dns/final: dns-out                          │ " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (19, " "), (21, " "), (26, " "), (28, " "), (34, " "), (36, " ")]
" │value at line 1 column 22                        ││/dns/servers: 2 项                           │ " Hidden by multi-width symbols: [(70, " ")]
" │文件原样留在磁盘上，没有被改写，也没有被部分应用。│/dns/tag: dns-in                             │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (51, " ")]
" │                                                 ││/experimental/clash_api/external_controller:…│ "
" │本页只读，不编辑 JSON：要改覆写就在数据目录的    ││/experimental/clash_api/secret: [已脱敏]     │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (87, " "), (89, " "), (91, " ")]
" │overrides/ 下改文件，再重启 sbtui。              ││/inbounds: 2 项                              │ " Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (36, " "), (67, " ")]
" │                                                 ││/log/level: info                             │ "
" │                                                 ││/log/timestamp: true                         │ "
" │                                                 ││/outbounds: 2 项                             │ " Hidden by multi-width symbols: [(68, " ")]
" │                                                 ││/route/auto_detect_interface: true           │ "
" │                                                 ││/route/final: 🚀节点选择                     │ " Hidden by multi-width symbols: [(68, " "), (70, " "), (72, " "), (74, " "), (76, " ")]
" │                                                 ││/route/object_cache_url: https://sbctl.test/…│ "
" │                                                 ││/route/rule_set: 1 项                        │ " Hidden by multi-width symbols: [(73, " ")]
" │                                                 ││/route/rules: 9 条                           │ " Hidden by multi-width symbols: [(70, " ")]
" │                                                 ││                                             │ "
" │                                                 ││                                             │ "
" │                                                 ││                                             │ "
" │                                                 ││                                             │ "
" │                                                 ││                                             │ "
" └─────────────────────────────────────────────────┘└─────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  只读  ·  ↑↓/Enter 开关片段（下次启动生效）  ·  O 删覆写  │  Ta " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (38, " "), (40, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " "), (78, " "), (87, " "), (89, " "), (91, " ")]
"                                                                                                    "
"                                                                                                    "
