crates/sbtui/src/view/snapshots/sbtui__view__render_tests__override-fragments.snap
---
source: crates/sbtui/src/view/mod.rs
expression: fragments_frame
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站  │  7 覆写                         " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " "), (72, " "), (74, " ")]
"                                                                                                    "
" ┌配置覆写 · 2/3 启用 · ↑↓ 选择 · Enter 开关───────┐┌生效配置 · 已脱敏 / redacted · 只读──────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (18, " "), (20, " "), (28, " "), (30, " "), (41, " "), (43, " "), (54, " "), (56, " "), (58, " "), (60, " "), (65, " "), (67, " "), (69, " "), (85, " "), (87, " ")]
" │档案  内网订阅                                   ││已脱敏 / redacted：密钥与订阅凭据不在此显示  │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (15, " "), (54, " "), (56, " "), (58, " "), (71, " "), (73, " "), (75, " "), (77, " "), (79, " "), (81, " "), (83, " "), (85, " "), (87, " "), (89, " "), (91, " "), (93, " "), (95, " ")]
" │覆写  2/3 片段启用 · 706 字节                    ││来源  运行中内核的配置（active-config.json） │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (13, " "), (15, " "), (17, " "), (19, " "), (28, " "), (30, " "), (54, " "), (56, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " "), (96, " ")]
" │生效  开关只改这个文件，下次启动内核时才生效     ││                                             │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " ")]
" │文件  数据目录/overrides/ 下本档案名的 sha256：  ││/dns/final: dns-out                          │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (15, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (48, " ")]
" │9f2c4a7e1b8d35f6a0c7e2d4b9f83c5e6d0a2f47b1c93d8e0││/dns/servers: 2 项                           │ " Hidden by multi-width symbols: [(70, " ")]
" │a5c7f2419db6e3                                   ││/dns/tag: dns-in                             │ "
" │  [启用] 内网直连（private-direct） · +2 条规则  ││/experimental/clash_api/external_controller:…│ " Hidden by multi-width symbols: [(6, " "), (8, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (36, " "), (44, " "), (46, " "), (48, " ")]
" │  改动  /route/rules(+2)                         ││/experimental/clash_api/secret: [已脱敏]     │ " Hidden by multi-width symbols: [(5, " "), (7, " "), (87, " "), (89, " "), (91, " ")]
" │  [停用] 自建 DNS（custom-dns）                  ││/inbounds: 2 项                              │ " Hidden by multi-width symbols: [(6, " "), (8, " "), (12, " "), (14, " "), (20, " "), (32, " "), (67, " ")]
" │  改动  /dns/final、/dns/servers(1 项)           ││/log/level: info                             │ " Hidden by multi-width symbols: [(5, " "), (7, " "), (21, " "), (38, " ")]
" │▸ [启用] 接管控制通道（take-over）               ││/log/timestamp: true                         │ " Hidden by multi-width symbols: [(6, " "), (8, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (35, " ")]
" │  改动  /experimental/clash_api/secret、/inbounds││/outbounds: 2 项                             │ " Hidden by multi-width symbols: [(5, " "), (7, " "), (41, " "), (68, " ")]
" │  ⚠ 保留  /experimental/clash_api/secret（客户端 ││/route/auto_detect_interface: true           │ " Hidden by multi-width symbols: [(7, " "), (9, " "), (43, " "), (45, " "), (47, " "), (49, " ")]
" │  ⚠ 保留  /route/auto_detect_interface（客户端写 ││/route/final: 🚀节点选择                     │ " Hidden by multi-width symbols: [(7, " "), (9, " "), (41, " "), (43, " "), (45, " "), (47, " "), (49, " "), (68, " "), (70, " "), (72, " "), (74, " "), (76, " ")]
" │  ⚠ 保留  /inbounds（客户端写回，不生效）        ││/route/object_cache_url: https://sbctl.test/…│ " Hidden by multi-width symbols: [(7, " "), (9, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " ")]
" │                                                 ││/route/rule_set: 1 项                        │ " Hidden by multi-width symbols: [(73, " ")]
" │⚠ 保留字段被覆写改动 · 启动内核时客户端写回原值… ││/route/rules: 9 条                           │ " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (70, " ")]
" │  /experimental/clash_api/secret — 控制通道密钥… ││                                             │ " Hidden by multi-width symbols: [(38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " ")]
" │  /inbounds — 入站由流量模式整体决定（系统代理 /…││                                             │ " Hidden by multi-width symbols: [(17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " "), (47, " ")]
" │  /route/auto_detect_interface — 本地运行必须自… ││                                             │ " Hidden by multi-width symbols: [(36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " ")]
" │本页只读，不编辑 JSON：要改覆写就在数据目录的    ││                                             │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " ")]
" │overrides/ 下改文件，再重启 sbtui。              ││                                             │ " Hidden by multi-width symbols: [(14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (36, " ")]
" └─────────────────────────────────────────────────┘└─────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  只读  ·  ↑↓ 选片段  ·  Enter 开/关片段（下次启动生效）  │  Tab " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (38, " "), (40, " "), (50, " "), (52, " "), (54, " "), (67, " "), (70, " "), (72, " "), (74, " "), (76, " "), (78, " "), (80, " "), (82, " "), (84, " "), (86, " "), (88, " "), (90, " ")]
"                                                                                                    "
"                                                                                                    "
