crates/sbtui/src/view/snapshots/sbtui__view__render_tests__rules-tab.snap
---
source: crates/sbtui/src/view/mod.rs
expression: "frame_for(Tab::Rules, snapshot)"
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站                                    " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " ")]
"                                                                                                    "
" ┌入站与分流规则 · r 返回日志─────────────────────────────────────────────────────────────────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (22, " "), (24, " "), (26, " "), (28, " ")]
" │── 入站（内核正在使用的配置）──                                                                 │ " Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " ")]
" │• mixed:2080（127.0.0.1） · mixed-in                                                            │ " Hidden by multi-width symbols: [(15, " "), (26, " ")]
" │• tun（全部地址） · tun-in                                                                      │ " Hidden by multi-width symbols: [(8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " ")]
" │                                                                                                │ "
" │── 分流规则（自上而下匹配）──                                                                   │ " Hidden by multi-width symbols: [(6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " ")]
" │ 1. 域名后缀 · example.com → 🚀节点选择                                                         │ " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (32, " "), (34, " "), (36, " "), (38, " "), (40, " ")]
" │ 2. 私有地址 → direct                                                                           │ " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " ")]
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  入站与规则来自内核正在使用的配置  ·  r 返回日志  │  Tab 切换   " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " "), (52, " "), (54, " "), (56, " "), (58, " "), (60, " "), (62, " "), (64, " "), (66, " "), (68, " "), (77, " "), (79, " "), (81, " "), (83, " "), (94, " "), (96, " ")]
"                                                                                                    "
"                                                                                                    "
