crates/sbtui/src/view/snapshots/sbtui__view__render_tests__tab-0.snap
---
source: crates/sbtui/src/view/mod.rs
expression: rendered
---
"                                                                                                    "
"  sbtui 网络控制台  /  ● 运行中  ·  东京-A  ·  ↓ 192.3 KiB/s  ↑ 237 B/s                             " Hidden by multi-width symbols: [(9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (26, " "), (28, " "), (30, " "), (37, " "), (39, " ")]
"   1 概览  │  2 节点  │  3 连接  │  4 日志  │  5 设置  │  6 入站  │  7 覆写                         " Hidden by multi-width symbols: [(6, " "), (8, " "), (17, " "), (19, " "), (28, " "), (30, " "), (39, " "), (41, " "), (50, " "), (52, " "), (61, " "), (63, " "), (72, " "), (74, " ")]
"                                                                                                    "
" ┌概览 · 紧凑视图─────────────────────────────────────────────────────────────────────────────────┐ " Hidden by multi-width symbols: [(3, " "), (5, " "), (10, " "), (12, " "), (14, " "), (16, " ")]
" │状态  运行中  ·  系统代理：未启用                                                               │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (9, " "), (11, " "), (13, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " "), (30, " "), (32, " "), (34, " ")]
" │                                                                                                │ "
" │代理路径                                                                                        │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " ")]
" │本机  →  东京-A  →  公网出口                                                                    │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (12, " "), (14, " "), (23, " "), (25, " "), (27, " "), (29, " ")]
" │规则 · 42 ms · 2 个活动连接                                                                     │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (20, " "), (22, " "), (24, " "), (26, " "), (28, " ")]
" │                                                                                                │ "
" │↓ 192.3 KiB/s  ███████░░░░░     ↑ 237 B/s  ███░░░░░░░░░                                         │ "
" │                                                                                                │ "
" │紧凑视图：放大终端可查看完整网络拓扑与事件。                                                    │ " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (41, " "), (43, " "), (45, " ")]
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" │                                                                                                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ────────────────────────────────────────────────────────────────────────────────────────────────── "
"  就绪。先导入订阅，再启动内核。  │  s 启动/停止  ·  u 更新订阅  ·  p 系统代理  ·  m 切换模式  │  T " Hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (40, " "), (42, " "), (45, " "), (47, " "), (56, " "), (58, " "), (60, " "), (62, " "), (71, " "), (73, " "), (75, " "), (77, " "), (86, " "), (88, " "), (90, " "), (92, " ")]
"                                                                                                    "
"                                                                                                    "
